fixed css animation on safari 15+

--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,8 @@ h1:hover ~ h3{
   text-align: center;
 }
 
+
+
 .rocketIcon {
   width: 40px;
   height: 40px;
@@ -115,6 +117,15 @@ h1:hover ~ h3{
   position: relative;
   text-align: center;
   color: #4B52ED;
+}
+
+@media not all and (min-resolution:.001dpcm) {
+  @supports (-webkit-appearance:none) {
+    .rocketIcon {
+      left: 65%;
+      top: 50%;
+    }
+  }
 }
 
 .rocketIcon:hover {
@@ -128,11 +139,10 @@ h1:hover ~ h3{
   left: 50%;
   top: 50%;
 
-  transform: translate(-50%, -39%);
-  -webkit-transform: translate(-50%, -39%);
+  transform: translate(-50%, -100%);
+  -webkit-transform: translate(-50%, -37%);
 
   animation: projectsPlanetOrbit 35s infinite linear;
-  -webkit-animation: projectsPlanetOrbit 35s infinite linear;
 
   border: 1px solid #4B52ED;
   border-radius: 50%;
@@ -149,6 +159,15 @@ h1:hover ~ h3{
   color: #4B52ED;
 }
 
+@media not all and (min-resolution:.001dpcm) {
+  @supports (-webkit-appearance:none) {
+    .meteorIcon {
+      left: 65%;
+      top: 50%;
+    }
+  }
+}
+
 .meteorIcon:hover {
   opacity: 0.5;
 }
@@ -157,6 +176,18 @@ h1:hover ~ h3{
 @keyframes aboutPlanetOrbit {
   0% {
     transform: translate(-50%, -25%) rotate(-360deg);
+  }
+  25% {
+    transform: translate(-50%, -25%) rotate(-270deg);
+  }
+  50% {
+    transform: translate(-50%, -25%) rotate(-180deg);
+  }
+  75% {
+    transform: translate(-50%, -25%) rotate(-90deg);
+  }
+  100% {
+    transform: translate(-50%, -25%) rotate(0deg);
   }
 }
 @-webkit-keyframes aboutPlanetOrbit {
@@ -182,9 +213,24 @@ h1:hover ~ h3{
 
 @keyframes experiencePlanetOrbit {
   0% {
-    transform: translate(-50%, -33%) rotate(360deg);
-    -webkit-animation-transform: translate(-50%, -33%) rotate(360deg);
-  }
+      transform: translate(-50%, -33%) rotate(360deg);
+    }
+  
+    25% {
+      transform: translate(-50%, -33%) rotate(270deg);
+    }
+  
+    50% {
+      transform: translate(-50%, -33%) rotate(180deg);
+    }
+  
+    75% {
+      transform: translate(-50%, -33%) rotate(90deg);
+    }
+  
+    100% {
+      transform: translate(-50%, -33%) rotate(0deg);
+    }
 }
 @-webkit-keyframes experiencePlanetOrbit {
   0% {
@@ -209,28 +255,26 @@ h1:hover ~ h3{
 
 @keyframes projectsPlanetOrbit {
   0% {
-    transform: translate(-50%, -39%) rotate(-360deg);
-    -webkit-animation-transform: translate(-50%, -39%) rotate(-360deg);
-  }
+      transform: translate(-50%, -37%) rotate(-360deg);
+    }
+  
+    25% {
+      transform: translate(-50%, -37%) rotate(-270deg);
+    }
+  
+    50% {
+      transform: translate(-50%, -37%) rotate(-180deg);
+    }
+  
+    75% {
+      transform: translate(-50%, -37%) rotate(-90deg);
+    }
+  
+    100% {
+      transform: translate(-50%, -37%) rotate(0deg);
+    }
 }
-@-webkit-keyframes projectsPlanetOrbit {
-  0% {
-    transform: translate(-50%, -39%) rotate(-360deg);
-    -webkit-animation-transform: translate(-50%, -39%) rotate(-360deg);
-  }
-}
-@-moz-keyframes projectsPlanetOrbit {
-  0% {
-    transform: translate(-50%, -39%) rotate(-360deg);
-    -webkit-animation-transform: translate(-50%, -39%) rotate(-360deg);
-  }
-}
-@-ms-keyframes projectsPlanetOrbit {
-  0% {
-    transform: translate(-50%, -39%) rotate(-360deg);
-    -webkit-animation-transform: translate(-50%, -39%) rotate(-360deg);
-  }
-}
+
 
 @keyframes move-twink-back {
   from {background-position:0 0;}
